# cauldron

./: .editorconfig  .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE.md  Makefile  README.md  meson.build  meson_options.txt  secrets.env.example
.github/workflows/: ci.yml
build-aux/: it.dottorblaster.cauldron.Devel.json
data/: it.dottorblaster.cauldron.desktop.in.in  it.dottorblaster.cauldron.gschema.xml.in  it.dottorblaster.cauldron.metainfo.xml.in.in  it.dottorblaster.cauldron.service.in  meson.build
data/resources/: resources.gresource.xml  style.css
data/resources/article_view/: native_style.css  style.css
data/resources/ui/: window.ui
po/: LINGUAS  POTFILES.in  cauldron.pot  es.po  it.po  pt_BR.po
src/: app.rs  application.rs  config.rs.in  main.rs  meson.build  types.rs  window.rs
src/article/: mod.rs  renderer.rs
src/modals/: about.rs  add_bookmark.rs  login.rs  mod.rs
src/network/: instapaper.rs  mod.rs  pocket.rs
src/persistence/: articles.rs  clipboard.rs  mod.rs  token.rs
src/testing/: mod.rs  widget_inspection.rs
