[package]
name = "cauldron"
version = "0.5.0"
authors = ["Alessio Biancalana <alessio@dottorblaster.it>"]
edition = "2021"
publish = false

[profile.release]
lto = true

[dependencies]
article_scraper = { git = "https://gitlab.com/news-flash/article_scraper.git" }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
relm4 = { version = "0.9.1", features = ["libadwaita", "gnome_47"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
anyhow = "1.0.100"
oauth1-request = "0.6"
open = "5.3.2"
reqwest = { version = "0.12.28", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
url = "2.5.7"
urlencoding = "2.1"
webkit6 = "0.4.0"
flume = "0.11.1"
