[package]
name = "cauldron"
version = "0.9.6"
authors = ["Alessio Biancalana <alessio@dottorblaster.it>"]
edition = "2021"
publish = false

[profile.release]
lto = true

[dependencies]
article_scraper = { git = "https://gitlab.com/news-flash/article_scraper.git" }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
relm4 = { version = "0.11.0", features = ["libadwaita", "gnome_50"] }
tracing = "0.1.44"
tracing-subscriber = "0.3"
anyhow = "1.0.102"
oauth1-request = "0.6"
open = "5.3.4"
reqwest = { version = "0.13.3", features = ["blocking", "json"], default-features = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
url = "2.5.8"
urlencoding = "2.1"
flume = "0.12.0"
scraper = "0.26.0"
html-escape = "0.2"
chrono = "0.4"

[dev-dependencies]
mockito = "1.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
